--- a/css/grids.css
+++ b/css/grids.css
@@ -4,89 +4,78 @@
     grid-area: -main;
     width: 100%;
     height: 100%;
-    border-radius: 5px;
-    margin-top: 50px;
-    padding: 2px 20px 2px 4px;
     /* background-color: rgba(199, 193, 16, 0.7); */
 }
 .masthead {
     grid-area: -masthead;
 }
-.services {
-    grid-area: -services;
-    margin-top: 50px;
-}
-.footer {
-    grid-area: -footer;
+.sidebar {
+    grid-area: -sidebar;
+    width: 100%;
+    height: 100%;
+    /* background-color: rgba(199, 16, 16, 0.7); */
 }
 .ad {
     grid-area: -ad;
     width: 100%;
     height: 100%;
-    border-radius: 5px;
-    margin-top: 25px;
-    padding: 2px 20px 2px 4px;
-    /* background-color: rgb(121, 121, 121); */
-}
-.sidebar {
-    grid-area: -sidebar;
-    width: 100%;
-    height: 100%;
-    border-radius: 5px;
-    margin-top: 25px;
     /* background-color: rgba(199, 16, 16, 0.7); */
 }
-
-
+.footer {
+    grid-area: -footer;
+    margin-top: 40px;
+}
 
 @media (min-width: 250px){
     .wrapper {
         display: grid;
-        gap: 0px;
+        gap: 5px;
         grid-template-areas: 
             "-masthead"
             "-main"
-            "-services"
-            "-ad"
             "-sidebar"
+            "-ad"
             "-footer";
     }
-    /* body {
-        background-color: blue;
-    } */
 }
 
-@media (min-width: 700px) {
+
+@media (min-width: 900px) {
     .wrapper {
-        grid-template-columns:  2.5fr 2.5fr;
+        grid-template-columns:  2fr 3.5fr;
         grid-template-areas: 
             "-masthead   -masthead"
-            "-main      -main"
-            "-services  -services"
-            "-sidebar       -ad"
+            "-sidebar      -main"
+            "-ad           -main"
             "-footer    -footer";
     }
-    /* body {
-        background-color: rgb(15, 187, 38);
-    } */
+    .wrapper {
+        width: 95vw;
+        margin: auto;
+    }
 }
 
-@media (min-width: 1200px) {
-    .main {
-        margin-top: 25px;
-    }
+@media (min-width: 1100px) {
     .wrapper {
+        gap: 10px;
         grid-template-columns:  2fr 5fr;
-        gap: 25px;
         grid-template-areas: 
             "-masthead   -masthead"
             "-sidebar       -main"
-            "-ad            -services"
+            "-ad           -main"
             "-footer    -footer";
     }
-        /* body {
-        background-color: rgb(187, 15, 155);
-    } */
+    .wrapper {
+        width: 93vw;
+        margin: auto;
+    }
+}
+
+@media (min-width: 1300px) {
+    .wrapper {
+        width: 82vw;
+        margin: auto;
+    }
 }
 
 
