--- a/blog/css/cards.css
+++ b/blog/css/cards.css
@@ -542,21 +542,32 @@
   color:#fff;
   padding:20px;
   border-radius: 5px;
+  font-family: "Roboto", Arial;
 }
 .card-res .card-meal-type{
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  font-size: 23px;
+  font-weight: 800;
   background-color: rgb(163,30,30);
+  /* background-color: transparent; */
+  border: 3px solid rgb(163,30,30);
+  color: rgb(231, 225, 225);
   text-align: center;
+  text-transform: uppercase;
   border-radius: 50px;
-  padding: 4px 10px 4px 10px;
+  padding: 4px 6px 4px 6px;
   width:200px;
 }
 .card-res .card-title{
   font-size:1.2rem;
   margin-bottom:3px;
   margin-top:2px;
+  text-indent: .2cm;
+  color: #c7c6c6;
 }
 .card-res .card-body{
   font-size:1rem;
+  text-indent: .2cm;
 }
 .card-res .card-price{
   width: 60px;
@@ -677,4 +688,9 @@
 } 
 
 /* ======== PRODUCT END/ ======== */ 
+
+.card-overlay {
+  box-sizing: content-box;
+  overflow: hidden;
+}
 
