--- a/blog/css/cards.css
+++ b/blog/css/cards.css
@@ -62,11 +62,15 @@
     }
     .btn-main {
         background-color: rgb(163,30,30);
-        border: 2px solid rgb(187, 36, 36);
+        border: 2px solid rgb(163, 36, 36);
         border-radius: 50px;
-        color: #e7e7e7;
-        padding: 4px 18px 4px 18px;
+        color: #dddddd;
+        padding: 8px 18px 8px 18px;
         font-size: 16px;
+    }
+    .btn-main:hover {
+      background-color: rgba(168, 31, 41, 1);
+      color: #ffffff;
     }
     .btn-black {
         background-color: #333;
